Update contact details and social media links

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div>
           <h4 class="font-semibold text-lg text-gray-800">Bean'S Bake</h4>
           <p class="text-sm mt-2 leading-relaxed text-gray-700">
-            Jl. Contoh No.123, Jakarta<br />
+            Perumahan Puri Delta Angsana blok BE 07<br />
             Buka: 08.00 - 18.00
           </p>
         </div>
@@ -297,7 +297,7 @@
           <div class="flex items-center gap-4 mt-3">
             <!-- Instagram -->
             <a
-              href="https://instagram.com/bhinnryarmdh_"
+              href="https://instagram.com/bakery.auz"
               target="_blank"
               class="hover:opacity-80 transition"
             >
@@ -317,7 +317,7 @@
 
             <!-- TikTok -->
             <a
-              href="https://tiktok.com/@akun_anda"
+              href="https://tiktok.com/@bakery.auzz"
               target="_blank"
               class="hover:opacity-80 transition"
             >
